use shiny templates and cdns
makes it easier to modularize components:
https://shiny.rstudio.com/articles/templates.html

Former-commit-id: d7ade635773c76e9c97762ec9aeaec36ce96cc03
Former-commit-id: 5d96088b81ca669f196171f91eb86d5655dec2ba
Former-commit-id: 7a7f6f27622f4507d736371eafdefe1882ada92a

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -16,7 +16,7 @@
 
 .input-group,
 .form-group {
-  max-width: 400px;
+  max-width: 400px !important;
   /* same height for any input type */
   height: 79px; 
 }
