fix styling bug for groups toggle
Former-commit-id: 361220eeaddc51a9fb3bbff931626370198e3193
Former-commit-id: 1ff4e667b5d419c66efc213e2d6f79062fead691
Former-commit-id: e40d9656a4df88b9e533f3f3abfcf268dda68a08

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -14,8 +14,7 @@
 
 /* FORMS BESIDE BUTTONS */
 
-.input-group,
-.form-group {
+.selectize-fh {
   max-width: 400px !important;
   /* same height for any input type */
   height: 79px; 
