only non-integrated (individual) analyses for integration #87
Former-commit-id: 62c55ce3ac7e011a5f80bbea8bd05bad57900be8
Former-commit-id: 7e6a81cf64705ca87f09bc9d8cb3224517c7560f
Former-commit-id: f913bdf57b90d80b0ff9f99b940ce6780eb572b4

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -11,6 +11,11 @@
   margin-right: 5px;
 }
 
+.form-control {
+  /* remove ugly box shadow from inputs */
+  box-shadow: inset 0px 0px 0px 0px red;
+}
+
 /* INTEGRATION RELATED */
 .integration-container {
   /* border-top: 1px solid lightgray; */
