init validation for integration #87
Former-commit-id: 91c252afd69be6534ded50a2d8cab3862ec03afd
Former-commit-id: de39b4be43a8262d352af45654d6bb851b737277
Former-commit-id: 4661a975b8953a889d737e6c80822a0cfafafc1f

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -17,6 +17,7 @@
 }
 
 /* INTEGRATION RELATED */
+
 .integration-container {
   /* border-top: 1px solid lightgray; */
   /* border-bottom: 1px solid lightgray; */
@@ -26,6 +27,21 @@
   padding: 10px;
   margin-bottom: 15px;
 }
+
+.validate-input.has-error button {
+  border-color: #a94442;
+  color: #a94442;
+  outline-color: #a94442;
+}
+
+.validate-input.has-error .help-block {
+  display: block;
+}
+
+.validate-input .help-block {
+  display: none;
+}
+
 
 
 
