cleanup validation classes for #87
Former-commit-id: 2275e072843c2267a3516f383a5f38809a0c9392
Former-commit-id: 4ae175ad26015f5b2e2e0a54cd24d0c2a7de7d5f
Former-commit-id: 954fd78aa16da9946b43285246fe7c4cfd587e66

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -18,7 +18,7 @@
 
 /* INTEGRATION RELATED */
 
-.integration-container {
+.well-form {
   /* border-top: 1px solid lightgray; */
   /* border-bottom: 1px solid lightgray; */
   border: 1px solid #e7e7e7;
@@ -28,17 +28,17 @@
   margin-bottom: 15px;
 }
 
-.validate-input.has-error button {
+.validate-wrapper.has-error button {
   border-color: #a94442;
   color: #a94442;
   outline-color: #a94442;
 }
 
-.validate-input.has-error .help-block {
+.validate-wrapper.has-error .help-block {
   display: block;
 }
 
-.validate-input .help-block {
+.validate-wrapper .help-block {
   display: none;
 }
 
