run integration and save results for #87
Former-commit-id: 18555787b6e370c50fbff508b360adb9105ba23e
Former-commit-id: 79e5a88328cb57dc6cee511c648da57efd0c7708
Former-commit-id: 36b81ca96c612eb413df6338ce103125a565416d

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -28,6 +28,10 @@
   margin-bottom: 15px;
 }
 
+
+
+/* VALIDATION RELATED */
+
 .validate-wrapper.has-error button {
   border-color: #a94442;
   color: #a94442;
@@ -40,6 +44,8 @@
 
 .validate-wrapper .help-block {
   display: none;
+  margin-top: 10px;
+  text-align: center;
 }
 
 
