implement setting point size and jitter; closes #89 & #88
Former-commit-id: 602950eeda2af5fb90f9699dc0f69a6860cfc748
Former-commit-id: 83decce3c10c4ed3231999085c5dae656d25c8c1
Former-commit-id: b4dfce3231e2f0c671c979c1740e437a4240b26d

--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -67,7 +67,9 @@
 }
 
 /* first button beside input when more than one */
-.input-group .squashed-btn {
+.input-group .squashed-btn,
+/* not first button in justified group */
+.btn-group-justified .btn-group:not(:first-child) button  {
   border-left-width: 0;
 }
 
