--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -97,11 +97,31 @@
 /* BRAND */
 .brand-icons {
   background-color: white;
-  padding: 5px;
+  padding: 5px 12px;
   border: 1px solid #ccc; 
 }
 
 .brand-icons i {
   color: cornflowerblue;
   font-size: 14px;
+}
+
+/* NAVBAR */
+.navbar-default {
+  background-color: white;
+}
+
+.navbar {
+  margin-bottom: 50px;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
+  padding: 5px 12px;
+  margin: 9px 2px;
+  border: 1px solid #ccc;
+  background-color: white;
+  color: cornflowerblue;
 }
