--- a/inst/shiny-apps/scseq/www/custom.css
+++ b/inst/shiny-apps/scseq/www/custom.css
@@ -73,7 +73,8 @@
   display: inline-block;
 }
 
-.input-group-btn .dropdown button {
+.input-group-btn .dropdown button,
+.input-group-btn a.btn {
   border-top-left-radius: 0; 
   border-bottom-left-radius: 0;
   border-left-width: 0px;
