init shiny app testing; move single-cell page to R/
Former-commit-id: 376f8ca5bf55eeafd8e1f1d534ecc2be22fa5021
Former-commit-id: d2e016cffb7dc993cb496e09c7b4e594d3e5354d
Former-commit-id: f697428c7c85956640756e438547a79a3c89fa41

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -93,6 +93,11 @@
   vertical-align: top;
 }
 
+/* same height as selectize input  */
+.input-group-btn .btn {
+  min-height: 34px;
+}
+
 
 /* BRAND */
 .brand-icons {
