init styling to compare samples for integrated #70
Former-commit-id: aa1abfe1e93531091370c74ac0982aa928c20520
Former-commit-id: 2d00d316b4acee6ec2fc71ca93075ff00900ce55
Former-commit-id: 91f079366d4b1f55ff2f7621ed18799a55399d67

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -64,6 +64,7 @@
   height: 79px; 
 }
 
+
 .input-group .selectize-input {
   border-top-right-radius: 0; 
   border-bottom-right-radius: 0;
@@ -98,18 +99,42 @@
   min-height: 34px;
 }
 
+/* FULL HEIGHT BUTTON BESIDE INPUT */
+.input-group.full-height-btn {
+  width: calc(100% - 43.5px);
+}
+
+.full-height-btn .input-group-btn {
+  width: 0px;
+}
+
+.full-height-btn button {
+  position: absolute !important;
+  top: 0;
+  bottom: 0;
+}
+
+.full-height-selectize {
+  height: 1px;
+}
+
+
+
+
 
 /* BRAND */
 .brand-icons {
   background-color: white;
   padding: 5px 12px;
   border: 1px solid #ccc; 
+  cursor: default;
 }
 
 .brand-icons i {
   color: cornflowerblue;
   font-size: 14px;
 }
+
 
 /* NAVBAR */
 .navbar-default {
