add shiny test for integration comparisons; update shiny tests
Former-commit-id: 680c894fbe0b46723c506128b5ca4bfdcd1b8575
Former-commit-id: 722ed2e15d66a311693d5def5a1b0a357ad65cdb
Former-commit-id: edf9ca59b16a3069cbf1b8566cb14f206a59daaf

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -99,24 +99,32 @@
   min-height: 34px;
 }
 
+
 /* FULL HEIGHT BUTTON BESIDE INPUT */
-.input-group.full-height-btn {
-  width: calc(100% - 42.5px);
-}
 
 .full-height-btn .input-group-btn {
-  width: 0px;
+  min-width: 42px;
 }
 
 .full-height-btn button {
   position: absolute !important;
   top: 0;
   bottom: 0;
+  right: 0;
 }
 
 .full-height-selectize {
-  height: 1px;
+  display: table-cell;
 }
+
+.full-height-selectize .selectize-input {
+  display: block;
+}
+
+.full-height-selectize .selectize-control {
+  margin-bottom: 0;
+}
+
 
 
 
