--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -19,13 +19,17 @@
 /* INTEGRATION RELATED */
 
 .well-form {
-  /* border-top: 1px solid lightgray; */
-  /* border-bottom: 1px solid lightgray; */
   border: 1px solid #e7e7e7;
   max-width: 400px !important;
   background-color: #f8f8f8;
   padding: 10px;
 }
+
+.well-form.no-well {
+  background-color: white;
+}
+
+
 
 .hidden-form {
   padding: 10px 0px 0px;
@@ -165,4 +169,44 @@
 /* STANDARDIZE HEIGHTS */
 .well-form .form-group {
   min-height: 79px;
+}
+
+
+.btn-group-justified .dropdown-toggle::after {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 17px;
+  margin-top: -3px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 5px 5px 0 5px;
+  border-color: #333333 transparent transparent transparent;
+}
+
+
+
+/* DATATABLES */
+
+.dt-fake-height {
+  height: 1px;
+}
+
+td.dt-nopad {
+  padding: 0px !important; 
+  height: 100%;
+}
+
+td.dt-nopad div {
+  height: 100%; 
+  width: 100%; 
+  text-align: center;
+}
+
+td.dt-nopad span {
+  display: inline-block; 
+  padding: 8px 10px; 
+  color: white;
 }
