init new bulk dataset quantification for #91
Former-commit-id: 73bcba5f9dbde229aa1cd60a0ab23501ca167d64
Former-commit-id: e345599fd0fbcaef7903a5f7a3f6c81b6ed4f64e
Former-commit-id: 0b060e84f2822a8bbe4cbbaa7ac114b424d86a3f

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -61,12 +61,14 @@
 
 
 /* FORMS BESIDE BUTTONS */
-
-.selectize-fh {
-  max-width: 400px !important;
-  /* same height for any input type */
-  min-height: 79px; 
+.well-form .form-group {
+  min-height: 100px;
 }
+
+.selectize-fh,
+.well-form .form-group {
+  min-height: 100px; 
+} 
 
 
 .input-group .selectize-input {
@@ -166,10 +168,7 @@
 }
 
 
-/* STANDARDIZE HEIGHTS */
-.well-form .form-group {
-  min-height: 79px;
-}
+
 
 
 .btn-group-justified .dropdown-toggle::after {
