show cell type info for Drugs tab; closes #94
Former-commit-id: a39c4d339366bc1d5fdab5b80c032fe7030b41e1
Former-commit-id: 309e79c81e647b671e4f5073f8407fc63af07035
Former-commit-id: 9487176d58269456e319da5a69e5db987fe6790d

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -209,3 +209,8 @@ td.dt-nopad span {
   padding: 8px 10px; 
   color: white;
 }
+
+/* table text on 1 line */
+.dt-container {
+  white-space: nowrap;
+}
