add KEGG pathway link; closes #102
Former-commit-id: 49a0cba7c23142a150d2dca12630c08662990855
Former-commit-id: 677fa31c1f744b9ed9f2810f085407a7fcc22fc4
Former-commit-id: 583da186826e23d88bdde98adc954bafe5116ce5

--- a/inst/app/www/pathways.css
+++ b/inst/app/www/pathways.css
@@ -1,4 +1,4 @@
-.path-name {
+.path-name-option {
   white-space: nowrap; 
   overflow: hidden; 
   text-overflow: ellipsis;
@@ -6,10 +6,19 @@
   padding-right: 10px;
 }
 
+.path-name-item {
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis;
+  max-width: 92%;
+  vertical-align: bottom;
+}
+
+
+
 .path-fdr {
   color: #A0A0A0;
-   white-space: 
-   nowrap;
+   white-space: nowrap;
    width: 50px;
    text-align: right;
 }
