add links to genes in pathway plot; closes #103
Former-commit-id: 366a41279f843dafb296dce52e4849e9c6468db5
Former-commit-id: 24f5932678ed4bb01d33e71f334b9a9078a5ee4a
Former-commit-id: 4d6f8d4f783ec624499339d6af894188e8073aa9

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -124,7 +124,7 @@
 }
 
 .full-height-selectize .selectize-input {
-  display: block;
+  display: block !important; 
 }
 
 .full-height-selectize .selectize-control {
