show pathway results for integrated single cell datasts; closes #104
Former-commit-id: 5dc69f0440f97f2210772b6f481484ca2533e043
Former-commit-id: 5b4f5b3a63f76a86af8d12e4d25dad998b018eb5
Former-commit-id: b3a8b60248f32592ddb98c5dfc37a9ef2b248233

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -112,6 +112,10 @@
   min-width: 42px;
 }
 
+.full-height-btn .input-group-btn:not(:last-child) button {
+  border-radius: 0;
+}
+
 .full-height-btn button {
   position: absolute !important;
   top: 0;
