implement download csv for single cell data #107 also fixed bug where top genes were missing in Pathways tab for single cell analyses
Former-commit-id: 250a8bb1c4ec0657cf84ab38d4abc543745e229f
Former-commit-id: 371dc7cfb55bd2a565661e38b6da9915991e241e
Former-commit-id: 51cd0f609af6c4d88ebb54eb07f6e7212e256112

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -108,11 +108,13 @@
 
 /* FULL HEIGHT BUTTON BESIDE INPUT */
 
-.full-height-btn .input-group-btn {
+.full-height-btn .input-group-btn,
+.full-height-btn .input-group-btn a {
   min-width: 42px;
 }
 
-.full-height-btn .input-group-btn:not(:last-child) button {
+.full-height-btn .input-group-btn:not(:last-child) button,
+.full-height-btn .input-group-btn:not(:last-child) a {
   border-radius: 0;
 }
 
