add tooltips to describe metadata; closes #116
Includes:
 - gene name descriptions (in Single Cell and Pathways tab)
 - descriptions of metadata (cell numbers, percentages, FDRs)

Additional updates:
 - make L1000 genetic GeneCards link more accessible
 - when comparing Single Cell samples, show n cells test :: ctrl


Former-commit-id: bd7255945cf95ec2e34a89e5d977be636a6458be
Former-commit-id: 2c7e5477ebe1e8b8157fec7d914ac9c1c728fa43
Former-commit-id: 8fdfe6073198d5cb4209d7adca13967fa2ca692e

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -1,3 +1,26 @@
+.hover-info {
+  border: 1px solid #ddd;
+  padding: 4px;
+  border-radius: 2px;
+  font-size: 12px;
+  position: relative;
+  left: 5px;
+  bottom: 12px;
+  color: #A0A0A0;
+  background: white;
+}
+
+.hover-info:hover {
+  background: #A0A0A0;
+  color: white;
+  border: 1px solid #A0A0A0;
+}
+
+.hover-info i {
+  vertical-align: middle;
+}
+
+
 .selectize-dropdown-content {
   max-height: 300px;
 }
