--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -2,7 +2,7 @@
   border: 1px solid #ddd;
   padding: 4px;
   border-radius: 2px;
-  font-size: 12px;
+  font-size: 10px;
   position: relative;
   left: 5px;
   bottom: 5px;
@@ -32,6 +32,22 @@
   border: 1px solid #54575a;
   display: inline-block; 
   margin-right: 5px;
+}
+
+.l1000-label .input-swatch {
+  height: 8px; 
+  width: 8px; 
+  border: none;
+  border-radius: 50%;
+  margin-right: 6px;
+  background-color: red;
+}
+
+.l1000-label {
+  display: none;
+  color: ##333;
+  font-family: "Open Sans", verdana, arial, sans-serif;
+  font-size: 14px;
 }
 
 .form-control {
