--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -1,19 +1,14 @@
 .hover-info {
-  border: 1px solid #ddd;
-  padding: 4px;
-  border-radius: 2px;
   font-size: 10px;
   position: relative;
-  left: 5px;
-  bottom: 5px;
+  padding: 4px;
+  left: -4px;
+  bottom: 10px;
   color: #A0A0A0;
-  background: white;
 }
 
 .hover-info:hover {
-  background: #A0A0A0;
-  color: white;
-  border: 1px solid #A0A0A0;
+  color: cornflowerblue;
 }
 
 .hover-info i {
