improve styling for MDS plots; closes #125
Former-commit-id: 5e2a7290bee4f10a0f61776eb3b6ad4f917782ed
Former-commit-id: cfc2ce32501142097aaf43de612fc474892a881c
Former-commit-id: 56eec2e4441de643d52cf49d1698ddee23ae0f97

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -7,6 +7,17 @@
   color: #A0A0A0;
 }
 
+.mobile-margin {
+  margin-top: 50px;
+}
+
+@media (min-width: 768px) {
+  .mobile-margin {
+    margin-top: 0px;
+  
+  }
+}
+
 .hover-info:hover {
   color: cornflowerblue;
 }
