improve MDS plot styling #125
Former-commit-id: d24afe9b6c4f1e802d17d8485b51a9018963b8c2
Former-commit-id: 9877a5997169218dfe118eb1110a5acb3eb093c1
Former-commit-id: a5d32baafa8c7dae57049c81acada66d5d0f7f8a

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -7,6 +7,8 @@
   color: #A0A0A0;
 }
 
+/* MDS plots */
+
 .mobile-margin {
   margin-top: 50px;
 }
@@ -17,6 +19,7 @@
   
   }
 }
+
 
 .hover-info:hover {
   color: cornflowerblue;
