styling fixes for tables
Former-commit-id: 1c323ca942261b4a421d3db5d0c922b4f209f28e
Former-commit-id: 9a2a869ef38b3f30a180d1016bb9e56a85cf348b
Former-commit-id: bbfeb595929eb810fd9ed305e707f48f983a4d90

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -7,6 +7,11 @@
   color: #A0A0A0;
 }
 
+/* fix for FixedColumns styling in Datasets tab */
+.DTFC_RightWrapper {
+  right: unset !important;
+}
+
 /* MDS plots */
 
 .mobile-margin {
