init logic/ui for showing pert signature in Pathways tab #137
also removed custom gene set in Pathways tab for #138


Former-commit-id: 4d06783b0b4ad5999c929cd227c9fff6964bf953 [formerly 215286ae2d18fc479fdbacf2d576a07fbc2b8516]
Former-commit-id: bf69c49935d821cb008eea60ea89281d2ea55472
Former-commit-id: 508ffb98d2c851c1d8ac65250a5d5ffcba2b4acd

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -49,16 +49,24 @@
 }
 
 /* swatch for Pathways plot L1000 label */
-.l1000-label .input-swatch {
-  height: 8px; 
-  width: 8px; 
+.pert-label .input-swatch {
+  height: 6px; 
+  width: 6px; 
   border: none;
   border-radius: 50%;
-  margin-right: 6px;
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+.pert-label .input-swatch.same {
   background-color: red;
 }
 
-.l1000-label {
+.pert-label .input-swatch.opposite {
+  background-color: blue;
+}
+
+.pert-label {
   display: none;
   color: #333;
   font-family: "Open Sans", verdana, arial, sans-serif;
