add download button for Datasets gene plot
Former-commit-id: bd9e637560a6dbd69dc100736f2719991f1eadfb [formerly 978ef5bfd4487d812cf96c2be42db9550db96ab1]
Former-commit-id: c8c39e2edd5233de894a7d5ddb2cf10ebe9a9327
Former-commit-id: 366826aba9bdf5b01c90a7d0329245022965d9ca

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -304,3 +304,10 @@ td.dt-nopad span {
 .dt-container {
   white-space: nowrap;
 }
+
+
+/* download button in input-group */
+.input-group-btn:last-child > .btn, 
+.input-group-btn:last-child > .btn-group {
+  border-left: 1px solid #ccc;
+}
