update man pages
Former-commit-id: d7e14518e0fbdd301daa82fe8e1ca88b8a5ea86d [formerly 84fd8f6f18d3edf035a613ebb09ffcfcaaa71167]
Former-commit-id: b9ffaaa92b9a9d64b420b2e629250c92d5ff247c
Former-commit-id: 0f3cfc9769454d07b02c917dc574653de36c2497

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -311,3 +311,42 @@ td.dt-nopad span {
 .input-group-btn:last-child > .btn-group {
   border-left: 1px solid #ccc;
 }
+
+/* downloadable plots */
+
+.downloadable-plot:hover .visible-plot.downloadable-plot-btn {
+  animation: 0.2s fadeIn;
+  animation-fill-mode: forwards;
+}
+
+.downloadable-plot-btn {
+  visibility: hidden;
+}
+
+.downloadable-plot-btn i {
+  color: rgba(68, 68, 68, 0.3);
+}
+
+.downloadable-plot-btn:hover i {
+  color: rgba(68, 68, 68, 0.7);
+}
+
+.downloadable-plot-btn .btn {
+  background-color: transparent !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.downloadable-plot-btn .btn {
+  border: none;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
