add tooltips to inputs with buttons; closes #145
Former-commit-id: 65cb6673e99afc816133fc4d9f4d0258c8eab843 [formerly 8f43d1def5b16857fab3e7fb4c45eece52933ef0]
Former-commit-id: 8fbc2b8aa076a577f169dcb58f0cec1daefba14e
Former-commit-id: 9aec3201e1c259cdb64f31dafd9ac2a93731f5b9

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -350,3 +350,15 @@ td.dt-nopad span {
     opacity: 1;
   }
 }
+
+/* custom tooltip styling */
+
+.tooltip.bottom .tooltip-inner{
+  max-width: 600px;
+  padding:16px 12px;
+  color:#fff;
+  text-align:center;
+  font-size: 14px;
+  background-color:rgba(0,0,0,0.90);
+  border-radius:5px;
+  }
