change pert effect size colors for #146
Former-commit-id: 0947001a5a1dc0bafd0e1f9f6da42fb50dd54686 [formerly 681ec14f9a09cb39c193c86f73db718a64f97771]
Former-commit-id: b2343f6ebbe45fa3bd5d1edfd8a86502426c60f2
Former-commit-id: dae0605ba84394878c12c9f18f9d6b6915592a06

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -59,11 +59,11 @@
 }
 
 .pert-label .input-swatch.same {
-  background-color: red;
+  background-color: #f64f5a;
 }
 
 .pert-label .input-swatch.opposite {
-  background-color: blue;
+  background-color: #1863e6;
 }
 
 .pert-label {
