init single cell documentation #147
Former-commit-id: 602792822013ea4fa27eaf768edd90b71b8b734d [formerly 15f0448ed7436cda5e1dee1f882a0484b9ca2e28]
Former-commit-id: b1fb1489be0ce2882d5de21206b733032ea2696f
Former-commit-id: 069a2765203ea2f12c03dd7174c23bd75d8955c0

--- a/inst/app/www/bs-docs.css
+++ b/inst/app/www/bs-docs.css
@@ -158,7 +158,7 @@
   
 
   .bs-docs-img {
-    padding: 40px 0px;
+    margin: 40px 0px;
     display: block;
     max-width: 100%;
     height: auto;
@@ -212,6 +212,25 @@ Requires a base and modifier class. */
   border-left-color: #1b809e;
 }
 
-.bs-callout-warning  h4 {
+.bs-callout-info h4 {
   color: #1b809e;
+}
+
+.bs-docs-btn {
+  margin: 0px;
+  border: 1px solid #ddd;
+  padding: 3px;
+  display: inline;
+  border-radius: 3px;
+}
+
+.bs-docs-primary {
+  background-color: #337ab7;
+  color: #fff;
+  padding: 3px 10px;
+  border-color: #337ab7;
+}
+
+.bs-docs-btn i {
+  vertical-align: middle;
 }
