change navbar styling slightly
Former-commit-id: 05c75698b9ec7e0f0e09e9b236ddf29921a232ef [formerly a4dc612a42356f294d8ec0c2c2424a691eaa5e59]
Former-commit-id: 3bfc4d30f74930082a8c0da30b4ed1c451ce0595
Former-commit-id: 5763133dc09813d8299b8677c34dc4ea27168a2a

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -227,8 +227,8 @@
 .brand-icons {
   background-color: white;
   padding: 5px 12px;
-  border: 1px solid #ccc; 
   cursor: default;
+  color: cornflowerblue;
 }
 
 .brand-icons i {
@@ -269,6 +269,7 @@ ul.nav.navbar-nav {
   border: 1px solid #ccc;
   background-color: white;
   color: cornflowerblue;
+  border-radius: 4px;
 }
 
 
