in process of moving drug gene plots from Pathways to Drugs tab
Former-commit-id: ecb2f725236e8562cc6b375d05e25b92533002f8 [formerly a437920be1d93ecbe577dcc8c6666b959e92d47e]
Former-commit-id: 26a6023e85c4eb35b18556d74d98d6d83025e864
Former-commit-id: 32c9cc38d02fe96a65285afc5252c7da107bfeb5

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -327,36 +327,44 @@ td.dt-nopad span {
   border-left: 1px solid #ccc;
 }
 
-/* downloadable plots */
+/* downloadable plots and table */
 
-.downloadable-plot:hover .visible-plot.downloadable-plot-btn {
+.downloadable-plot:hover .visible-plot.downloadable-plot-btn,
+.hide-btn-container:hover button.dt-button.buttons-collection,
+.hide-btn-container .hide-btn  {
   animation: 0.2s fadeIn;
   animation-fill-mode: forwards;
 }
 
-.downloadable-plot-btn {
+.downloadable-plot-btn,
+button.dt-button.buttons-collection,
+.hide-btn {
   animation: 0.2s fadeOut;
   animation-fill-mode: forwards;
 }
 
-.downloadable-plot-btn i {
+.downloadable-plot-btn i,
+button.dt-button.buttons-collection i,
+.hide-btn i {
   color: rgba(68, 68, 68, 0.3);
 }
 
-.downloadable-plot-btn:hover i {
+.downloadable-plot-btn:hover i,
+button.dt-button.buttons-collection:hover i,
+.hide-btn:hover i {
   color: rgba(68, 68, 68, 0.7);
 }
 
-.downloadable-plot-btn .btn {
+.downloadable-plot-btn .btn,
+button.dt-button.buttons-collection,
+.hide-btn {
   background-color: transparent !important;
   outline: none !important;
   box-shadow: none !important;
+  border: none;
+  padding: 3px 4px;
 }
 
-.downloadable-plot-btn .btn {
-  border: none;
-  padding: 0px;
-}
 
 @keyframes fadeIn {
   0% {
@@ -401,6 +409,10 @@ td.dt-nopad span {
   border-radius: 2px;
 }
 
-.tooltip.ggplot .tooltip-arrow {
+.tooltip.ggplot.left .tooltip-arrow {
   border-left-color: rgb(105, 115, 138);
+}
+
+.tooltip.ggplot.bottom .tooltip-arrow {
+  border-bottom-color: rgb(105, 115, 138);
 }
