finish adding query/gene plots to Drugs tab #150
Former-commit-id: 8a884153d36d60c26a852e2acf942423aca91b69 [formerly a43a59ec44c3d6cfcc3bebae6806aabf0a86ecf6]
Former-commit-id: f48398526df2d8b0b9ce9f5532be302d8fb9384f
Former-commit-id: 037c7528db3e398d46ec274beca59d2ff5e948c6

--- a/inst/app/www/pathways.css
+++ b/inst/app/www/pathways.css
@@ -16,6 +16,21 @@
 .scroll-plot {
   overflow-x: visible;
   overflow-y: hidden;
+  scrollbar-color: #286090 #C2D2E4;
+}
+
+.scroll-plot::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.scroll-plot::-webkit-scrollbar-track-piece  {
+  background-color: #C2D2E4;
+}
+
+.scroll-plot::-webkit-scrollbar-thumb:horizontal {
+  height: 30px;
+  background-color: #286090;
 }
 
 .scroll-plot-modal {
