--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -102,16 +102,21 @@
 }
 
 .hidden-form {
-  padding: 10px 0px 0px;
+  padding: 15px 0px 0px;
   border-width: 1px 0px;
   border-style: solid;
   border-color: #e7e7e7;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
+}
+
+.hidden-form.bottom {
+  border-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 /* makes borders work when multiple hidden forms */
 .hidden-forms {
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .hidden-forms .hidden-form {
