refactor Pathways tab; uses GO
Former-commit-id: 6bf42e46c14494e8f92022de6d73fb8de86a83e1 [formerly bfb3617354b0de98c76c6768f1aa58d255540b19]
Former-commit-id: c03ab88222fb26c74b8eb4610feb71142b4c9bf4
Former-commit-id: dbb363576c53cc1bdc376d2c2a9369b3fa223572

--- a/inst/app/www/pathways.css
+++ b/inst/app/www/pathways.css
@@ -6,11 +6,15 @@
   padding-right: 10px;
 }
 
+.path-option-right {
+  width: 50px;
+  white-space: nowrap;
+}
+
 .path-fdr {
   color: #A0A0A0;
-   white-space: nowrap;
-   width: 50px;
    text-align: right;
+   display: inline-block;
 }
 
 .scroll-plot {
