show drug genes plot by default and rotated
Former-commit-id: 24ea8e9077f92769c68b2520fb4761f224f6dcd5 [formerly bd969c371557c4665c6cb2aeecdd8a53254a7c57]
Former-commit-id: d8b7a2d07503d5db640d7e78e2516ca37ac5a897
Former-commit-id: b43bbe1e9076b6b7ae1173dd9ecafa7671286260

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -290,6 +290,12 @@ ul.nav.navbar-nav {
   border-radius: 4px;
 }
 
+.navbar-default .navbar-nav>a:hover,
+.navbar-default .navbar-nav>a:focus,
+.navbar-default .navbar-nav>li>a:hover {
+  border: 1px solid white;
+}
+
 
 
 
