fix mobile issues
Former-commit-id: d96574f86d8b2373d291d4c162aa0dd553f86989 [formerly 4234d4f1162eed2bf28214b4092ed0bb61ebfec0]
Former-commit-id: d46fc43bef1e06d98945f6151a9281d17a53299d
Former-commit-id: d5ffad0a42ced61a688cabe566d1673174bfb704

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -238,6 +238,11 @@
   margin-bottom: 0;
 }
 
+/* so that shrinks on mobile */
+.full-height-selectize input {
+  width: 100% !important;
+}
+
 
 
 /* BRAND */
@@ -453,4 +458,26 @@ button.dt-button.buttons-collection,
 
 .bulk-item {
   background-color: white !important;
+}
+
+input[type=text] {   
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none; 
+}
+
+
+/* display: hidden prevents plotly rendering */
+.visibility-lg {
+  visibility: hidden !important;
+  @media (min-width: 1200px) {
+    visibility: visible !important;  
+  }
+}
+
+.visibility-md-down {
+  visibility: visible !important;
+  @media (max-width: 1200px) {
+    visibility: hidden !important;  
+  }
 }
