--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -467,17 +467,11 @@ input[type=text] {
 }
 
 
-/* display: hidden prevents plotly rendering */
-.visibility-lg {
-  visibility: hidden !important;
-  @media (min-width: 1200px) {
-    visibility: visible !important;  
-  }
-}
-
-.visibility-md-down {
-  visibility: visible !important;
-  @media (max-width: 1200px) {
-    visibility: hidden !important;  
-  }
-}
+/* hide tooltips on mobile */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+    .tooltip {
+        display: none !important;
+    }
+ }
