remove outline for download buttons
Former-commit-id: 636e71c7ebfb6e28417188b1fc9b656381ef3f79 [formerly 0ee97305007289694c73c50709bb7172e2db952e]
Former-commit-id: 9a1fd8c4f630dac8faed784cf051ea632b901133
Former-commit-id: c121dbd8288304ffdbccd2311c41d739b931cc49

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -168,6 +168,7 @@
   border-top-left-radius: 0; 
   border-bottom-left-radius: 0;
   border-left-width: 0px;
+  outline: none;
 }
 
 .input-group-btn.dropdown .caret {
