--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -14,6 +14,10 @@
 
 /* MDS plots */
 
+.beside-downloadable {
+  margin-top: 0px;
+}
+
 .mobile-margin {
   margin-top: 50px;
 }
@@ -21,6 +25,9 @@
 @media (min-width: 1200px) {
   .mobile-margin {
     margin-top: 0px;
+  }
+  .beside-downloadable {
+    margin-top: 26px;
   }
 }
 
