init rintrojs for single-cell page
Former-commit-id: 372404f505020a1586b642a2bc10df623a3d2281 [formerly 491efb37be5d2e5f4726592f074ab24e8ed88281]
Former-commit-id: cf8cfe7ec7e20fabab00cdc8e2149eb89fb65fda
Former-commit-id: 1da06ac33c4cc762e14166bdab61270f00df3253

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -485,3 +485,22 @@ and (max-device-width : 1024px) {
         display: none !important;
     }
  }
+
+
+.btn-intro {
+  border: 1px solid #ddd;
+  padding: 4px;
+  padding-top: 6px;
+  border-radius: 2px;
+  cursor: pointer;
+  font-size: 12px;
+  position: relative;
+  bottom: 30px;
+  color:#333;
+}
+
+.btn-intro:hover {
+  background:#333;
+  color:#fff;
+  border-color:transparent;
+}
