hide downloadable plot buttons when no plot
Former-commit-id: 363f53020db9e18a76370eadd944f63f65812602 [formerly 0de1436c2949e8331900e72a2d63939a2f560080]
Former-commit-id: 9aa05fd675111cb2f36e40366175cdd7fe657ebd
Former-commit-id: d420eaa3d70b05b4012e995d993e42182af5101e

--- a/inst/app/www/custom.css
+++ b/inst/app/www/custom.css
@@ -395,6 +395,11 @@ button.dt-button.buttons-collection,
   box-shadow: none !important;
   border: none;
   padding: 3px 4px;
+  display: none;
+}
+
+.visible-plot a.btn {
+  display: block;
 }
 
 
